Added concept of WicaChannelName composed of protocol, ControlSystemName and instance.